--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,11 @@
 # Setup the environment for producing the results in the paper
-# Activate the environmet to run your code using "source activate my-paper"
-# or "activate my-paper" on Windows.
-name: my-paper
+# Activate the environment to run your code using "source activate TPS-identification"
+# or "activate TPS-identification" on Windows.
+name: TPS-identification
 channels:
-    # Prioritize packages from conda-forge to avoid conflicts with defaults
     - conda-forge
     - defaults
 dependencies:
-    # Lis the dependencies here. It's good practice to specify the exact
-    # versions. Use 'conda list' to see your currently installed packages and
-    # their versions.
     - python
     - pip
     - numpy
