--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
     - scipy
     - jupyter=1.0.0
     - scikit-learn
+    - hdbscan
     - pip:
         - webcolors
         - tqdm
@@ -21,5 +22,4 @@ dependencies:
         - folium
         - suntime
         - datetime
-        - dateutil
-        - hdbscan
+        - python-dateutil
