--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
         - webcolors
         - tqdm
         - geopy
-        - folium=0.8.3
+        - folium==0.8.3
         - suntime
         - datetime
         - python-dateutil
